examples/test/testpolicy3982.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3982
  namespace: namespace85
spec:
  podSelector:
    matchLabels:
      key19: value29
      key34: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value25
          key5: value22
      podSelector:
        matchLabels:
          key30: value45
          key2: value4
